# html2pdf-rs

./: .gitignore  Cargo.toml  Dockerfile  DockerfileBase  README.md
src/: main.rs
src/html2pdf/: html.rs  mod.rs
src/infra/: mod.rs  resp.rs
src/routers/: mod.rs  router_html2pdf.rs
src/vo/: mod.rs  vo_html2pdf.rs
