[package]
name = "rs-html2pdf"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { version = "4.9.0" }
tokio = {version = "1.39.2", features = ["full"]}
time = "0.3.36"
headless_chrome = "1.0.15"
anyhow = "1.0.93"
log = "0.4.22"
env_logger = "0.11.5"
actix-cors = "0.7.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.127"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.